minor update to video search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.redis.username =
 spring.redis.password = 
 spring.redis.database = 0
 
-youtube.apikey=AIzaSyAM488-EU2Rc1DSsGIwpi0veNTloOJ7gzM
+youtube.apikey=abc123
